--- a/Vocation_Booking/css/styles.css
+++ b/Vocation_Booking/css/styles.css
@@ -36,7 +36,7 @@ body {
 
 .btn {
   color: black;
-  font-size: 120%;
+  font-size: 40%;
   padding: 10px 20px;
   border-radius: 5px;
 }
@@ -81,4 +81,125 @@ html {
   background-color: teal;
   color: greenyellow;
   border-radius: 20px;
+}
+
+/**
+holiday section...***/
+
+.holiday-section {
+  padding: 51px;
+  text-align: center;
+  color: blue;
+}
+
+.holiday-heading {
+  font-size: 50px;
+  height: 50px;
+  color: green;
+}
+
+.holiday-text {
+  height: 10px;
+}
+
+.button {
+  padding: 10px;
+  color: red;
+  margin-top: 750px;
+  display: inline-block;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+/** places to visit section**/
+
+.places-to-visit,
+p {
+  text-align: center;
+  margin-top: 20px;
+  padding: 10px;
+}
+
+.places-div img {
+  width: 45%; /* Adjusts the width of each image */
+  height: 110%; /* Maintains the aspect ratio */
+}
+
+.places-div img {
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+.places-div img:hover {
+  /* This is for applying effects for the images*/
+  transform: scale(1.1);
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.4);
+  padding: auto;
+  overflow: hidden;
+}
+
+/* packages section....  */
+
+.Packages_section {
+  text-align: center;
+  margin-top: 20px;
+}
+
+.Packages_section.package-wrapper {
+  margin-top: 10px;
+}
+
+.package-wrapper .package-card {
+  box-shadow: 0 0 10px greenyellow;
+  border-radius: 5px;
+  width: 250px;
+  height: 515px;
+
+  display: inline-block; /* Here this inline - block makes all our images in a horizontal way.*/
+  padding: 10px;
+}
+
+.package-card img {
+  width: 100%;
+  height: 240px;
+}
+
+.package-card img:hover {
+  /* This is for applying effects for the images*/
+  transform: scale(1.1);
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.4);
+  padding: auto;
+  overflow: hidden;
+}
+
+.package-card.btn1.btn2.btn3 {
+  border-radius: 50px;
+
+  color: rgb(129, 129, 164);
+  margin-bottom: 50px;
+}
+
+.btn {
+  color: red;
+}
+
+.btn1 {
+  color: brown;
+}
+
+.btn2 {
+  color: blueviolet;
+}
+
+.btn3 {
+  color: orange;
+}
+
+.footer-section {
+  padding: 10px;
+  background-color: greenyellow;
+  text-align: center;
+  margin-top: 30px;
 }
